--- a/views/index.erb
+++ b/views/index.erb
@@ -11,6 +11,27 @@
 
 <!------------------------------------------------------------------------------------->
 
+<!-- About -->
+<section id="about">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12 text-center">
+				<h2 class="section-heading text-uppercase">Sobre</h2>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-8 mx-auto text-center">
+				<h2 class="section-heading text-white">We've got what you need!</h2>
+				<hr class="light my-4">
+				<p class="text-faded mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultricies nisl sed ligula rutrum, vel accumsan erat euismod. Maecenas ullamcorper, lorem et interdum pretium, turpis lectus luctus ipsum, vitae pellentesque neque velit eget turpis. Suspendisse ut ultrices metus. Quisque ac mi aliquet, elementum dolor sed, consectetur mi. Nam iaculis lobortis eros tincidunt rutrum. </p>
+				<a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
+			</div>
+		</div>
+	</div>
+</section>
+
+<!------------------------------------------------------------------------------------->
+
 <!-- Services -->
 <section id="services">
 	<div class="container">
@@ -44,102 +65,6 @@
 				</span>
 				<h4 class="service-heading">Web Security</h4>
 				<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-			</div>
-		</div>
-	</div>
-</section>
-
-<!------------------------------------------------------------------------------------->
-
-<!-- About -->
-<!-- <section id="about">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-12 text-center">
-				<h2 class="section-heading text-uppercase">About</h2>
-				<h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-lg-12">
-				<ul class="timeline">
-					<li>
-						<div class="timeline-image">
-							<img class="rounded-circle img-fluid" src="img/about/1.jpg" alt="">
-						</div>
-						<div class="timeline-panel">
-							<div class="timeline-heading">
-								<h4>2009-2011</h4>
-								<h4 class="subheading">Our Humble Beginnings</h4>
-							</div>
-							<div class="timeline-body">
-								<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-							</div>
-						</div>
-					</li>
-					<li class="timeline-inverted">
-						<div class="timeline-image">
-							<img class="rounded-circle img-fluid" src="img/about/2.jpg" alt="">
-						</div>
-						<div class="timeline-panel">
-							<div class="timeline-heading">
-								<h4>March 2011</h4>
-								<h4 class="subheading">An Agency is Born</h4>
-							</div>
-							<div class="timeline-body">
-								<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="timeline-image">
-							<img class="rounded-circle img-fluid" src="img/about/3.jpg" alt="">
-						</div>
-						<div class="timeline-panel">
-							<div class="timeline-heading">
-								<h4>December 2012</h4>
-								<h4 class="subheading">Transition to Full Service</h4>
-							</div>
-							<div class="timeline-body">
-								<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-							</div>
-						</div>
-					</li>
-					<li class="timeline-inverted">
-						<div class="timeline-image">
-							<img class="rounded-circle img-fluid" src="img/about/4.jpg" alt="">
-						</div>
-						<div class="timeline-panel">
-							<div class="timeline-heading">
-								<h4>July 2014</h4>
-								<h4 class="subheading">Phase Two Expansion</h4>
-							</div>
-							<div class="timeline-body">
-								<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-							</div>
-						</div>
-					</li>
-					<li class="timeline-inverted">
-						<div class="timeline-image">
-							<h4>Be Part
-							<br>Of Our
-							<br>Story!</h4>
-						</div>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</div>
-</section> -->
-
-<section id="about">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-8 mx-auto text-center">
-				<h2 class="section-heading text-white">We've got what you need!</h2>
-				<hr class="light my-4">
-				<p class="text-faded mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultricies nisl sed ligula rutrum, vel accumsan erat euismod. Maecenas ullamcorper, lorem et interdum pretium, turpis lectus luctus ipsum, vitae pellentesque neque velit eget turpis. Suspendisse ut ultrices metus. Quisque ac mi aliquet, elementum dolor sed, consectetur mi. Nam iaculis lobortis eros tincidunt rutrum. </p>
-				<a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
 			</div>
 		</div>
 	</div>
@@ -209,41 +134,8 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12 text-center">
-				<h2 class="section-heading text-uppercase">contato</h2>
-				<h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-lg-12">
-				<form id="contactForm" name="sentMessage" novalidate="novalidate">
-					<div class="row">
-						<div class="col-md-6">
-							<div class="form-group">
-								<input class="form-control" id="name" type="text" placeholder="Nome *" required="required" data-validation-required-message="Por favor digite seu nome.">
-								<p class="help-block text-danger"></p>
-							</div>
-							<div class="form-group">
-								<input class="form-control" id="email" type="email" placeholder="Email *" required="required" data-validation-required-message="Por favor digite seu email.">
-								<p class="help-block text-danger"></p>
-							</div>
-							<div class="form-group">
-								<input class="form-control" id="phone" type="tel" placeholder="Celular *" required="required" data-validation-required-message="Por favor digite seu celular.">
-								<p class="help-block text-danger"></p>
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="form-group">
-								<textarea class="form-control" id="message" placeholder="Sua mensagem *" required="required" data-validation-required-message="Digite uma mensagem."></textarea>
-								<p class="help-block text-danger"></p>
-							</div>
-						</div>
-						<div class="clearfix"></div>
-						<div class="col-lg-12 text-center">
-							<div id="success"></div>
-							<button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Enviar</button>
-						</div>
-					</div>
-				</form>
+				<h2 class="section-heading text-uppercase">Fale conosco</h2>
+				<h3 class="service-heading email">vemcomlepri@gmail.com</h3>
 			</div>
 		</div>
 	</div>
