--- a/views/layout.erb
+++ b/views/layout.erb
@@ -21,6 +21,7 @@
 
     <!-- Custom styles for this template -->
     <link href="../css/agency.min.css" rel="stylesheet">
+    <link href="../css/lepridogs.css" rel="stylesheet">
 </head>
 <body id="page-top">
 
@@ -35,10 +36,10 @@
 		<div class="collapse navbar-collapse" id="navbarResponsive">
 			<ul class="navbar-nav text-uppercase ml-auto">
 				<li class="nav-item">
-					<a class="nav-link js-scroll-trigger" href="#services">Something</a>
+					<a class="nav-link js-scroll-trigger" href="#about">Sobre</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link js-scroll-trigger" href="#about">Sobre</a>
+					<a class="nav-link js-scroll-trigger" href="#services">Something</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link js-scroll-trigger" href="#team">Time</a>
@@ -60,37 +61,9 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-4">
-				<span class="copyright">Copyright &copy; Your Website 2018</span>
+				<span class="copyright">Copyright &copy; lepridogs 2018</span>
 			</div>
-			<div class="col-md-4">
-				<ul class="list-inline social-buttons">
-					<li class="list-inline-item">
-						<a href="#">
-							<i class="fab fa-twitter"></i>
-						</a>
-					</li>
-					<li class="list-inline-item">
-						<a href="#">
-							<i class="fab fa-facebook-f"></i>
-						</a>
-					</li>
-					<li class="list-inline-item">
-						<a href="#">
-							<i class="fab fa-linkedin-in"></i>
-						</a>
-					</li>
-				</ul>
-			</div>
-			<div class="col-md-4">
-				<ul class="list-inline quicklinks">
-					<li class="list-inline-item">
-						<a href="#">Privacy Policy</a>
-					</li>
-					<li class="list-inline-item">
-						<a href="#">Terms of Use</a>
-					</li>
-				</ul>
-			</div>
+			<div class="col-md-6"></div>
 		</div>
 	</div>
 </footer>
