--- a/views/index.erb
+++ b/views/index.erb
@@ -1,142 +1,15 @@
-<!-- Header -->
-<header class="masthead">
-	<div class="container">
-		<div class="intro-text">
-			<div class="intro-lead-in">texto de destaque principal</div>
-			<div class="intro-heading text-uppercase">segundo texto</div>
-			<a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">something</a>
-		</div>
-	</div>
-</header>
 
-<!------------------------------------------------------------------------------------->
+<!-- Header -->
+<%= erb :header %>
 
 <!-- About -->
-<section id="about">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-12 text-center">
-				<h2 class="section-heading text-uppercase">Sobre</h2>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-lg-8 mx-auto text-center">
-				<h2 class="section-heading text-white">We've got what you need!</h2>
-				<hr class="light my-4">
-				<p class="text-faded mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultricies nisl sed ligula rutrum, vel accumsan erat euismod. Maecenas ullamcorper, lorem et interdum pretium, turpis lectus luctus ipsum, vitae pellentesque neque velit eget turpis. Suspendisse ut ultrices metus. Quisque ac mi aliquet, elementum dolor sed, consectetur mi. Nam iaculis lobortis eros tincidunt rutrum. </p>
-				<a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
-			</div>
-		</div>
-	</div>
-</section>
+<%= erb :about %>
 
-<!------------------------------------------------------------------------------------->
-
-<!-- Services -->
-<section id="services">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-12 text-center">
-				<h2 class="section-heading text-uppercase">Something</h2>
-				<h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-			</div>
-		</div>
-		<div class="row text-center">
-			<div class="col-md-4">
-				<span class="fa-stack fa-4x">
-					<i class="fas fa-circle fa-stack-2x text-primary"></i>
-					<i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
-				</span>
-				<h4 class="service-heading">E-Commerce</h4>
-				<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-			</div>
-			<div class="col-md-4">
-				<span class="fa-stack fa-4x">
-					<i class="fas fa-circle fa-stack-2x text-primary"></i>
-					<i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
-				</span>
-				<h4 class="service-heading">Responsive Design</h4>
-				<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-			</div>
-			<div class="col-md-4">
-				<span class="fa-stack fa-4x">
-					<i class="fas fa-circle fa-stack-2x text-primary"></i>
-					<i class="fas fa-lock fa-stack-1x fa-inverse"></i>
-				</span>
-				<h4 class="service-heading">Web Security</h4>
-				<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-			</div>
-		</div>
-	</div>
-</section>
-
-<!------------------------------------------------------------------------------------->
+<!-- Descricao -->
+<%= erb :description %>
 
 <!-- Time -->
-<section class="bg-light" id="team">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-12 text-center">
-				<h2 class="section-heading text-uppercase">Our Amazing Team</h2>
-				<h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-sm-6">
-				<div class="team-member">
-					<img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
-					<h4>Leticia Fernandes</h4>
-					<p class="text-muted">@fernandesleticia</p>
-					<ul class="list-inline social-buttons">
-						<li class="list-inline-item">
-							<a href="#"><i class="fab fa-twitter"></i></a>
-						</li>
-						<li class="list-inline-item">
-							<a href="#"><i class="fab fa-facebook-f"></i></a>
-						</li>
-						<li class="list-inline-item">
-							<a href="#"><i class="fab fa-linkedin-in"></i></a>
-						</li>
-					</ul>
-				</div>
-			</div>
-			<div class="col-sm-6">
-				<div class="team-member">
-					<img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
-					<h4>Priscila Fasulo</h4>
-					<p class="text-muted">@fasulopri</p>
-					<ul class="list-inline social-buttons">
-						<li class="list-inline-item">
-							<a href="#"><i class="fab fa-twitter"></i></a>
-						</li>
-						<li class="list-inline-item">
-							<a href="#"><i class="fab fa-facebook-f"></i></a>
-						</li>
-						<li class="list-inline-item">
-							<a href="#"><i class="fab fa-linkedin-in"></i></a>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-lg-8 mx-auto text-center">
-				<p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
-			</div>
-		</div>
-	</div>
-</section>
-
-<!------------------------------------------------------------------------------------->
+<%= erb :team %>
 
 <!-- Contato -->
-<section id="contact">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-12 text-center">
-				<h2 class="section-heading text-uppercase">Fale conosco</h2>
-				<h3 class="service-heading email">vemcomlepri@gmail.com</h3>
-			</div>
-		</div>
-	</div>
-</section>
+<%= erb :contact %>
