--- a/views/layout.erb
+++ b/views/layout.erb
@@ -39,7 +39,7 @@
 					<a class="nav-link js-scroll-trigger" href="#about">Sobre</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link js-scroll-trigger" href="#services">Something</a>
+					<a class="nav-link js-scroll-trigger" href="#description">O que fazemos</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link js-scroll-trigger" href="#team">Time</a>
