--- a/public/css/lepridogs.css
+++ b/public/css/lepridogs.css
@@ -1,12 +1,12 @@
 
 /*		commom		*/
-section#description, section#team {
+section#about, section#description, section#team {
 	/*background-color: #edb400;
 	color: #fff;*/
 	font-family: Montserrat,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
 }
 
-section#description p, section#team p {
+section#about p, section#description p, section#team p, {
     font-size: 1rem;
 }
 
