--- a/views/contact.erb
+++ b/views/contact.erb
@@ -1,7 +1,7 @@
 <section id="contact">
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-12 text-center">
+			<div class="col-lg-12 text-right">
 				<h2 class="section-heading text-uppercase">Fale conosco</h2>
 				<h3 class="service-heading email">vemcomlepri@gmail.com</h3>
 			</div>
