--- a/views/team.erb
+++ b/views/team.erb
@@ -9,14 +9,14 @@
 		<div class="row">
 			<div class="col-sm-6">
 				<div class="team-member">
-					<img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
+					<img class="mx-auto rounded-circle" src="img/1.jpg" alt="">
 					<h4>Leticia Fernandes</h4>
 					<p>algum texto?</p>
 				</div>
 			</div>
 			<div class="col-sm-6">
 				<div class="team-member">
-					<img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
+					<img class="mx-auto rounded-circle" src="img/1.jpg" alt="">
 					<h4>Priscila Fasulo</h4>
 					<p>algum texto?</p>
 				</div>
